<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="googleMapApiKey" translatable="false">AIzaSyA3gbDnnBX4F57Htlum7iI0jtC18-Cj13M</string>
    <string name="app_name">پیتزا وای فای</string>
    <string name="next">بعدی</string>
    <string name="mContinue">ادامه</string>
    <string name="exitAppWarning">برای خروج کلید بازگشت را مجددا بزنید</string>
    <string name="exitRegisterWarning">برای خروج از ثبت نام کلید بازگشت را مجددا بزنید</string>
    <string-array name="introTitles">
        <item>مواد اولیه تازه</item>
        <item>تحویل به موقع</item>
        <item>تجهیزات مدرن</item>
    </string-array>
    <string-array name="introDescriptions">
        <item>استفاده از مواد مصرفی تازه و بروز و استفاده از معتبرترین برندها ماموریت ماست تا برگری با طعم تازگی رو به شما عرضه کنیم</item>
        <item>سیستم حمل و نقل پیتزا وای فای با پرسنل آموزش دیده تمام سعی خود را برای رساندن غذای گرم به مشتری انجام میدهد</item>
        <item>استفاده از تجهیزات به روز و مدرن در شعب و تولید برگر در کارخانه با سیستم مکانیزه و بدون دخالت دست به ما کمک میکند تا برگر شما را به بهترین نحو اماده کنیم</item>
    </string-array>
    <string name="app_font_hekayat">fonts/hekayat.ttf</string>
    <string name="loginWord">ورود</string>
    <string name="login">ورود به حساب کاربری</string>
    <string name="loginTitle1">برای ادامه لطفا تلفن همراه خود را وارد کنید</string>
    <string name="mobileHint">تلفن همراه</string>
    <string name="mobileHintNew">شماره همراه جدید</string>
    <string name="verifyCode">کد تایید</string>
    <string name="verifyHint">*****</string>
    <string name="loginTitle2">لطفا کد ۵ رقمی ارسال شده به شماره %s را وارد کنید</string>
    <string name="sendAgain">ارسال مجدد کد</string>
    <string name="verifyTimer">ارسال مجدد کد (%s)</string>
    <string name="loginInfo">اطلاعات اولیه</string>
    <string name="nameHint">نام و نام خانوادگی</string>
    <string name="acceptRegister">تمامی قوانین و ضوابط را خوانده ام و میپذیرم</string>
    <string name="register">عضویت در پیتزا وای فای</string>
    <string name="introducerHint">شماره همراه معرف (اختیاری)</string>
    <string name="emptyMobile">شماره تلفن همراه خود را وارد کنید</string>
    <string name="wrongMobile">شماره تلفن همراه وارد شده معتبر نمی باشد</string>
    <string name="enterCode">کد تایید را وارد کنید</string>
    <string name="wrongCode">کد تایید وارد شده معتبر نمی باشد</string>
    <string name="emptyName">نام را وارد کنید</string>
    <string name="acceptLaw">قوانین و ضوابط را مطالعه و تایید نمایید</string>
    <string name="menu0">خانه</string>
    <string name="menu1">سفارشات</string>
    <string name="menu2">سبد خرید</string>
    <string name="menu3">پروفایل</string>
    <string name="menu4">بیشتر</string>
    <string name="makePizza">پیتزای خودتو بساز</string>
    <string name="makePizzaDescription">برای شما که سلیقه خاصی دارید</string>
    <string name="restaurantMenu">سفارش از منو</string>
    <string name="customerMenu">منو مشتریان</string>
    <string name="productName">نام محصول</string>
    <string name="add">افزودن</string>
    <string name="personalize">سفارشی سازی</string>
    <string name="enterTournament">ورود به مسابقه</string>
    <string name="productMenuTitle">منو</string>
    <string name="productDetail">جزئیات پیتزا</string>
    <string name="addToCart">افزودن به سبد خرید</string>
    <string name="saveAndAddToCart">ثبت و افزودن به سبد خرید</string>
    <string name="productCustomerRate">3.7</string>
    <string name="productSender">فرستنده: %s</string>
    <string name="customerProductCommentCount">%s نظر</string>
    <string name="customerPizzaTitle">پیتزای ساخته شده</string>
    <string name="customerMenuDetail">جزئیات پیتزا</string>
    <string name="customerPizzaMaterialTitle">مواد استفاده شده در پیتزا</string>
    <string name="customerPizzaMaterialTitle2">مواد استفاده شده در پیتزای شما</string>
    <string name="comments">نظرات</string>
    <string name="addComment">ثبت نظر</string>
    <string name="enterYourRate">امتیاز خود را ثبت کنید</string>
    <string name="writeYourComment">نظر خود را بنویسید</string>
    <string name="comment">متن نظر</string>
    <string name="addImage">اضافه کردن عکس (اختیاری)</string>
    <string name="startMake">شروع ساخت</string>
    <string name="orders">سفارشات</string>
    <string name="noOrderFound">شما تاکنون سفارشی ثبت نکرده اید</string>
    <string name="searchOrder">جستجوی سفارش</string>
    <string name="enterOrderId">شماره سفارش را وارد کنید</string>
    <string name="orderId">سفارش شماره %s</string>
    <string name="orderDetailTitle">جزئیات سفارش #%s</string>
    <string name="totalPrice">مبلغ کل: </string>
    <string name="remainTime">زمان باقی مانده</string>
    <string name="orderItems">اقلام سفارش</string>
    <string name="orderItemCount">%s عدد</string>
    <string name="orderDetail">جزئیات سفارش</string>
    <string name="orderUserInfo">اطلاعات تکمیلی سفارش</string>
    <string name="orderDetail2">پیگیری سفارش</string>
    <string name="orderDetail3">مشاهده فاکتور</string>
    <string name="orderer">نام خریدار: %s</string>
    <string name="orderer2">دریافت در: %s</string>
    <string name="ordererTitle">نام خریدار</string>
    <string name="ordererTitle2">شعبه</string>
    <string name="ordererMobile">شماره تماس</string>
    <string name="ordererAddress">آدرس</string>
    <string name="orderTimeTitle">زمان سفارش</string>
    <string name="waitingTime">زمان انتظار</string>
    <string name="reorder">سفارش مجدد</string>
    <string name="walletAmountLabel">موجودی کیف پول</string>
    <string name="walletAmount">موجودی کیف پول:</string>
    <string name="clubAmountLabel">امتیاز باشگاه مشتریان</string>
    <string name="myPizzas">پیتزاهای من</string>
    <string name="noPizzaFound">شما هنوز پیتزایی نساخته اید</string>
    <string name="searchPizza">جستجوی پیتزا</string>
    <string name="sendToCustomerMenu">ارسال پیتزا به منو مشتریان</string>
    <string name="mSend">ارسال</string>
    <string name="noSupport">شما هنوز درخواستی ثبت نکرده اید</string>
    <string name="mSupport">پشتیبانی</string>
    <string name="supportId">درخواست شماره #%s</string>
    <string name="addSupport">ثبت درخواست جدید</string>
    <string name="supportTitle">عنوان درخواست</string>
    <string name="supportMessage">متن درخواست</string>
    <string name="sendSupport">ارسال درخواست</string>
    <string name="wallet">کیف پول</string>
    <string name="noTransactionFound">تراکنشی یافت نشد</string>
    <string name="walletHint">مبلغ (تومان)</string>
    <string name="increaseWallet">افزایش موجودی</string>
    <string name="transactionHistory">تراکنش های من</string>
    <string name="logoutTitle">خروج از حساب</string>
    <string name="logoutDescription">آیا برای خروج از حساب کاربری اطمینان دارید؟</string>
    <string name="forceLogoutDescription">شما به علت برخی مشکلات از اپلیکیشن خارج شدید، لطفا برای ورود مجدد تلاش کنید.</string>
    <string name="editUserInfo">ویرایش اطلاعات کاربری</string>
    <string name="birthDateHint">تاریخ تولد</string>
    <string name="weddingDateHint">تاریخ ازدواج</string>
    <string name="save">ذخیره</string>
    <string name="emptyComptetion">شما هنوز در مسابقه ای شرکت نکرده اید</string>
    <string name="myCompetitions">مسابقه های من</string>
    <string name="cometitionDetail">جزئیات مسابقه</string>
    <string name="competitionOver">مسابقه پایان یافته است</string>
    <string name="competitionTimer">تا پایان مسابقه</string>
    <string name="emptyAddress">شما هنوز آدرسی ثبت نکرده اید</string>
    <string name="myAddresses">آدرس های من</string>
    <string name="selectAddress">انتخاب آدرس</string>
    <string name="addAddress">ثبت آدرس جدید</string>
    <string name="selectAddressOnMap">انتخاب آدرس از روی نقشه</string>
    <string name="search">جستجو</string>
    <string name="saveContinue">ثبت و ادامه</string>
    <string name="addressDetail">جزئیات آدرس</string>
    <string name="address">آدرس دقیق</string>
    <string name="address2">آدرس</string>
    <string name="changeAddress">تغییر آدرس</string>
    <string name="mobileHint2">شماره تلفن همراه</string>
    <string name="emptyAddress2">لطفا آدرس را وارد کنید</string>
    <string name="changeNumberTitle1">از این قسمت میتوانید شماره موبایل خود را تغییر دهید\nتمام اطلاعات شما به شماره جدید انتقال داده میشوند</string>
    <string name="changeNumber">تغییر شماره همراه</string>
    <string name="sameNumber">شماره همراه جدید نمی تواند با شماره همراه فعلی برابر باشد</string>
    <string name="verifyCodeTitle">تایید شماره همراه</string>
    <string name="emptyMessages">شما هنوز پیامی دریافت نکرده اید</string>
    <string name="notifications">پیام های مدیریت</string>
    <string name="contactUs">تماس با ما</string>
    <string name="aboutUs">درباره ما</string>
    <string name="findUsInSocials">ما را در شبکه های اجتماعی دنبال کنید</string>
    <string name="contactUsInfo">اطلاعات تماس پیتزا وای فای</string>
    <string name="law">قوانین و مقررات</string>
    <string name="faq">سوالات متداول</string>
    <string name="area">مناطق تحت پوشش</string>
    <string name="shopCart">سبد خرید</string>
    <string name="emptyBasket">سبد خرید شما خالی میباشد</string>
    <string name="totalToPay">مبلغ قابل پرداخت</string>
    <string name="mContinue2">تایید و ادامه</string>
    <string name="_delete">حذف</string>
    <string name="noFaqFound">سوالی یافت نشد</string>
    <string name="emptyMessage">لطفا متن پیام را وارد کنید</string>
    <string name="emptyTitle">عنوان را وارد کنید</string>
    <string name="emptyAmount">لطفا یک مبلغ را وارد کنید</string>
    <string name="wrongAmount">مبلغ کمتر از 200 تومان قابل پرداخت نمی باشد</string>
    <string name="somethingWrong">خطایی رخ داده است لطفا دوباره تلاش کنید</string>
    <string name="paymentFailed">پرداخت ناموفق</string>
    <string name="paymentSuccess">پرداخت با موفقیت انجام شد</string>
    <string name="addressAddWarning">خطای ثبت آدرس</string>
    <string name="addressDeleteTittle">حذف آدرس</string>
    <string name="addressDeleteText">آیا از حذف آدرس اطمینان دارید؟</string>
    <string name="wrongImageValue">خطا در انتخاب عکس</string>
    <string name="noOrderFoundSearch">سفارشی با این شماره یافت نشد</string>
    <string name="orderStatus">وضعیت سفارش</string>
    <string name="noProductFound">محصولی یافت نشد</string>
    <string name="pendingStatus">در حال بررسی</string>
    <string name="acceptStatus">تایید شده</string>
    <string name="sentStatus">ارسال شده</string>
    <string name="deliveredStatus">تحویل شده</string>
    <string name="declinedStatus">رد شده</string>
    <string name="makerDisabled">درحال حاضر پیتزاساز غیرفعال می باشد</string>
    <string name="breadStepTitle">انتخاب خمیر</string>
    <string name="nextStep">مرحله بعد</string>
    <string name="calory">%s کالری</string>
    <string name="notExists">ناموجود</string>
    <string name="prevStep">مرحله قبل</string>
    <string name="selectBread">لطفا خمیر را انتخاب کنید</string>
    <string name="breadEmptySteps">خمیر انتخاب شده دارای مراحل پیتزاساز نمی باشد</string>
    <string name="minStepMaterialError">برای مرحله %s حداقل باید %s مورد انتخاب کنید</string>
    <string name="minStepRightMaterialError">برای مرحله %s حداقل باید %s مورد از سمت راست انتخاب کنید</string>
    <string name="makerProductsTitle">پیش غذا،‌ نوشابه و سالاد</string>
    <string name="dessertsTitle">سالاد و پیش غذا</string>
    <string name="drinksTitle">نوشیدنی</string>
    <string name="decideTitle">برای ادامه یکی از مراحل زیر را انتخاب کنید</string>
    <string name="goShopCart">رفتن به سبد خرید</string>
    <string name="makeAnotherPizza">پیتزای دیگری بساز</string>
    <string name="selectFromMenu">انتخاب پیتزا از منو</string>
    <string name="edit">ویرایش</string>
    <string name="selectWhich">انتخاب کنید</string>
    <string name="makeFullPizza">ساختن پیتزای کامل</string>
    <string name="makeHalfPizza">ساختن پیتزای نصف نصف</string>
    <string name="tools">ابزار</string>
</resources>