<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.maker.decide.Decide">

    <data>

        <variable
            name="viewModel"
            type="ir.atriatech.pizzawifi.ui.main.maker.decide.DecideFragmentViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="locale">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbarId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarId"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40mdp"
                android:background="@color/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtToolbar"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/_8mdp"
                        android:gravity="center_vertical|start"
                        android:text="@string/selectWhich"
                        android:textAlignment="viewStart"
                        android:textColor="@color/appbarText"
                        android:textSize="@dimen/_15font_mdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.core.widget.NestedScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/mainView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16mdp"
                        android:layout_marginEnd="@dimen/_16mdp"
                        android:layout_marginBottom="@dimen/_16mdp"
                        android:gravity="center"
                        android:text="@string/decideTitle"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_16font_mdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/goToShopCart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_50mdp"
                        android:layout_marginEnd="@dimen/_50mdp"
                        android:gravity="center"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/goShopCart"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14font_mdp"
                        app:cornerRadius="@dimen/_20mdp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/makeAnotherPizza"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_50mdp"
                        android:layout_marginTop="@dimen/_24mdp"
                        android:layout_marginEnd="@dimen/_50mdp"
                        android:gravity="center"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/makeAnotherPizza"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14font_mdp"
                        app:cornerRadius="@dimen/_20mdp" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/goToMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/_50mdp"
                        android:layout_marginTop="@dimen/_24mdp"
                        android:layout_marginEnd="@dimen/_50mdp"
                        android:gravity="center"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/selectFromMenu"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14font_mdp"
                        app:cornerRadius="@dimen/_20mdp" />

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>