<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="item"
            type="ir.atriatech.pizzawifi.entities.profile.address.Address" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtTitle"
            style="@style/AppFontBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10mdp"
            android:text="@string/tools"
            android:textColor="@color/black"
            android:textSize="@dimen/_14font_mdp"
            app:layout_constraintEnd_toStartOf="@id/imgClose"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgClose"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="@id/txtTitle"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/txtTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="@dimen/_10mdp"
            android:text="@{item.address, default=`@string/address`}"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="@dimen/_12mdp"
            app:layout_constraintEnd_toEndOf="@id/imgClose"
            app:layout_constraintStart_toStartOf="@id/txtTitle"
            app:layout_constraintTop_toBottomOf="@id/txtTitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEdit"
            style="@style/AppFontBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10mdp"
            android:layout_marginTop="@dimen/_10mdp"
            android:layout_marginEnd="@dimen/_10mdp"
            android:gravity="center"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/edit"
            android:textSize="@dimen/_14font_mdp"
            app:backgroundTint="@color/color4F"
            app:cornerRadius="@dimen/_20mdp"
            app:icon="@drawable/ic_create_outline"
            app:iconSize="@dimen/_18mdp"
            app:layout_constraintEnd_toStartOf="@id/btnDelete"
            app:layout_constraintStart_toStartOf="@id/txtTitle"
            app:layout_constraintTop_toBottomOf="@id/txtAddress" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDelete"
            style="@style/AppFontBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10mdp"
            android:layout_marginEnd="@dimen/_10mdp"
            android:gravity="center"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/_delete"
            android:textSize="@dimen/_14font_mdp"
            app:backgroundTint="@color/colorPrimary"
            app:cornerRadius="@dimen/_20mdp"
            app:icon="@drawable/ic_trash2"
            app:iconSize="@dimen/_18mdp"
            app:layout_constraintEnd_toEndOf="@id/imgClose"
            app:layout_constraintStart_toEndOf="@id/btnEdit"
            app:layout_constraintTop_toTopOf="@id/btnEdit" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>