<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.maker.MakerStep1">

    <data>

        <variable
            name="viewModel"
            type="ir.atriatech.pizzawifi.ui.main.maker.MakerStep1FragmentViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="locale">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbarId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarId"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40mdp"
                android:background="@color/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtToolbar"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|start"
                        android:text="@string/makePizza"
                        android:textAlignment="viewStart"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15font_mdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgFullPizza"
                android:layout_width="@dimen/_130mdp"
                android:layout_height="@dimen/_130mdp"
                android:scaleType="fitCenter"
                android:src="@drawable/pizza_full"
                app:layout_constraintBottom_toTopOf="@id/cvFullPizza"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cvFullPizza"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4mdp"
                android:text="@string/makeFullPizza"
                app:cornerRadius="@dimen/_20mdp"
                app:layout_constraintBottom_toTopOf="@id/imgHalfPizza"
                app:layout_constraintEnd_toEndOf="@id/cvHalfPizza"
                app:layout_constraintStart_toStartOf="@id/cvHalfPizza"
                app:layout_constraintTop_toBottomOf="@id/imgFullPizza"
                app:layout_constraintVertical_chainStyle="packed" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgHalfPizza"
                android:layout_width="@dimen/_130mdp"
                android:layout_height="@dimen/_130mdp"
                android:layout_marginTop="@dimen/_16mdp"
                android:scaleType="fitCenter"
                android:src="@drawable/pizza_half"
                app:layout_constraintBottom_toTopOf="@id/cvHalfPizza"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvFullPizza" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cvHalfPizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4mdp"
                android:text="@string/makeHalfPizza"
                app:cornerRadius="@dimen/_20mdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgHalfPizza" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>